--- a/assets/css1.css
+++ b/assets/css1.css
@@ -28,6 +28,7 @@ body {
     .flasher { background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/69/Color_Flash.gif') }
     .beyaz { color: white; }
     .sari { color: darkgoldenrod; }
+    .yesil { color: green; }
     .sigtext { font-family: 'CustomFont', sans-serif; }
     .dev { font-size: 100px; }
     .buyuk { font-size: 65px; }
